# gworkspace-ifts18-helper

./: .gitignore  README.md  gwih.py  helper.ipynb  pyproject.toml
assets/: example.csv
gworkspace_ifts18_helper/: constants.py  core.py  helpers.py
