[tool.poetry]
name = "gworkspace-ifts18-helper"
version = "0.1.0"
description = "IFTS18's Google Workspace Helper"
authors = ["lecovi <lecovi@ac.python.org.ar>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^2.50.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
